[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hsgd-dr"
version = "0.1.0"
description = "Heterogeneous GraphSAGE-DistMult framework for drug repurposing over biomedical knowledge graphs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "PyYAML",
  "tqdm",
  "torch",
  "torch-geometric",
]

[tool.setuptools]
py-modules = [
  "contrastive_learning",
  "cross_validation",
  "data_preprocessing",
  "evidence_retrieval",
  "experiment_logging",
  "io_utils",
  "leakage_control",
  "metrics",
  "model_architecture",
  "negative_sampling",
  "node_features",
  "prediction",
  "pyg_dataset",
  "schema",
  "training_evaluation",
]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
hsgd-dr-prepare = "data_preprocessing:main"
hsgd-dr-features = "node_features:main"
hsgd-dr-leakage = "leakage_control:main"
hsgd-dr-train = "training_evaluation:main"
hsgd-dr-cv = "cross_validation:main"
hsgd-dr-predict = "prediction:main"
hsgd-dr-evidence = "evidence_retrieval:main"
